Fixed overflow in header

--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -4,12 +4,12 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 2.5rem 1rem;
-  gap: 52.75rem;
+  /* gap: 52.75rem; */
 }
 
 .yrgo-logo {
-  width: 12.75rem;
-  height: 3.125rem;
+  max-width: 12.75rem;
+  height: auto;
   margin-right: 2rem;
 }
 
